[package]
name = "fastgen"
version = "0.1.0"
authors = ["cju"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ctrlc = { version = "3.1", features = ["termination"] }
clap = "2.32"
libc = "0.2"
protobuf = "2"
num-traits = "0.2"
num-derive = "0.2"
nix = "0.13"
byteorder = "1.2"
log = "0.4"
pretty_env_logger = "0.3"
fastgen_common = { path = "../common" }
wait-timeout = "0.2"
twoway = "0.2.0"
memmap = "0.7.0"
rand = "0.7"

[build-dependencies]
protoc-rust = "2.0"
